# pydantic-kitbash

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  refactor.md
.github/: CODEOWNERS
.github/workflows/: qa.yaml  release-publish.yaml
docs/: conf.py
pydantic-kitbash/: __init__.py
pydantic_kitbash/: __init__.py  base.py  directives.py  field_directive.py  model_directive.py  utils.py
tests/: conftest.py
tests/integration/: test_pydantic_kitbash.py
tests/integration/example/: __init__.py  conf.py  index.rst  project.py
tests/integration/example/_ext/: __init__.py  pydantic-kitbash.py
tests/unit/: conftest.py  test_base.py  test_kitbash_field.py  test_kitbash_model.py  test_supporting_functions.py  test_utils.py
